add main for home

--- a/home/index.html
+++ b/home/index.html
@@ -34,12 +34,25 @@
         </nav>
       </section>
 
-      <section class="header-img">
-        <!-- <img src="./img/Gold-1.jpg" /> -->
-      </section>
+      <section class="header-img"></section>
     </header>
 
     <!-- main -->
+    <section class="article-container">
+        <h1>Latest Products</h1>
+        <section class="article-home">
+            <article><img src="./img/bangles.jfif" alt="pic"></article>
+            <article><img src="./img/earing.jfif" alt="pic"></article>
+            <article><img src="./img/komor.jfif" alt="pic"></article>
+            <article><img src="./img/long.jfif" alt="pic"></article>
+            <article><img src="./img/neck.jfif" alt="pic"></article>
+            <article><img src="./img/nose.jfif" alt="pic"></article>
+            <article><img src="./img/ratan.jfif" alt="pic"></article>
+            <article><img src="./img/tiara.jfif" alt="pic"></article>
+        </section>
+
+        <button>view all</button>
+    </section>
 
     <!-- footer -->
     <footer>
