add main in about

--- a/about/index.html
+++ b/about/index.html
@@ -38,6 +38,26 @@
     </header>
 
     <!-- main -->
+    <section class="main-container">
+      <div class="pic-container">
+        <div class="pic"></div>
+        <img src="./img/144A6414.webp" alt="about us" />
+      </div>
+
+      <div class="main-info">
+        <h2>About us</h2>
+        <br />
+        <p style="line-height: 30px">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. <br />
+          Quaerat, fugiat explicabo consequuntur quae doloribus tenetur est
+          quibusdam officia dolore impedit. <br />
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda,
+          ipsa.
+        </p>
+        <br />
+        <button>know more</button>
+      </div>
+    </section>
 
     <!-- footer -->
     <footer>
