add main for shop

--- a/shop/index.html
+++ b/shop/index.html
@@ -39,6 +39,36 @@
 
     <!-- main -->
 
+    <section class="contaner">
+      <div class="off-container">
+        <img src="./img/shop.png" alt="sail" class="sail" />
+        <div class="offa">
+          <h4>UpTo 10% off</h4>
+          <br />
+          <button>shop now</button>
+        </div>
+      </div>
+      <div class="off-container">
+        <img src="./img/shop2.jpg" alt="sail" class="sail" />
+        <div class="offb">
+          <h4>UpTo 20% off</h4>
+          <br />
+          <button>shop now</button>
+        </div>
+      </div>
+      <div class="off-container">
+        <img src="./img/shop3.jpg" alt="sail" class="sail" />
+        <div class="offc">
+          <h4>
+            UpTo 15% <br />
+            <span style="font-size: xx-large">off</span>
+          </h4>
+          <br />
+          <button>shop now</button>
+        </div>
+      </div>
+    </section>
+
     <!-- footer -->
     <footer>
       <div class="foot-container">
