--- a/home/index.html
+++ b/home/index.html
@@ -37,7 +37,7 @@
       <section class="header-img"></section>
     </header>
 
-    <!-- main -->
+    <!-- main home-->
     <section class="article-container">
       <h1>Latest Products</h1>
       <section class="article-home">
@@ -52,6 +52,91 @@
       </section>
 
       <button>view all</button>
+    </section>
+    <!-- about -->
+    <section class="main-container">
+      <div class="pic-container">
+        <div class="pic"></div>
+        <img src="./img/144A6414.webp" alt="about us" />
+      </div>
+
+      <div class="main-info">
+        <h2>About us</h2>
+        <br />
+        <p style="line-height: 30px">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. <br />
+          Quaerat, fugiat explicabo consequuntur quae doloribus tenetur est
+          quibusdam officia dolore impedit. <br />
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda,
+          ipsa.
+        </p>
+        <br />
+        <button>know more</button>
+      </div>
+    </section>
+
+    <!-- shop -->
+    <section class="contaner">
+      <div class="off-container">
+        <img src="./img/shop.png" alt="sail" class="sail" />
+        <div class="offa">
+          <h4>UpTo 10% off</h4>
+          <br />
+          <button>shop now</button>
+        </div>
+      </div>
+      <div class="off-container">
+        <img src="./img/shop2.jpg" alt="sail" class="sail" />
+        <div class="offb">
+          <h4>UpTo 20% off</h4>
+          <br />
+          <button>shop now</button>
+        </div>
+      </div>
+      <div class="off-container">
+        <img src="./img/shop3.jpg" alt="sail" class="sail" />
+        <div class="offc">
+          <h4>
+            UpTo 15% <br />
+            <span style="font-size: xx-large">off</span>
+          </h4>
+          <br />
+          <button>shop now</button>
+        </div>
+      </div>
+    </section>
+
+    <!-- blog -->
+    <section class="main-container">
+      <h2>Latest From Blog</h2>
+
+      <section class="blog-container">
+        <div class="card">
+          <img src="./img/blog.webp" alt="blog" />
+          <h4>Jewelry suitable for fall style</h4>
+          <br />
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Accusantium cumque veniam facere id doloribus, soluta nihil aut
+            voluptatum inventore esse.
+          </p>
+          <br />
+          <button>read more</button>
+        </div>
+
+        <div class="card">
+          <img src="./img/blog2.jpg" alt="blog" />
+          <h4>Jewelry suitable for fall style</h4>
+          <br />
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime
+            dignissimos corrupti hic aperiam accusantium obcaecati, ad a
+            explicabo odit ipsam!
+          </p>
+          <br />
+          <button>read more</button>
+        </div>
+      </section>
     </section>
 
     <!-- footer -->
