--- a/home/index.html
+++ b/home/index.html
@@ -54,7 +54,7 @@
       <button>view all</button>
     </section>
     <!-- about -->
-    <section class="main-container">
+    <section class="main-containe">
       <div class="pic-container">
         <div class="pic"></div>
         <img src="./img/144A6414.webp" alt="about us" />
@@ -76,7 +76,7 @@
     </section>
 
     <!-- shop -->
-    <section class="contaner">
+    <section class="contane">
       <div class="off-container">
         <img src="./img/shop.png" alt="sail" class="sail" />
         <div class="offa">
